@@ -1,0 +1,5 @@
+QT += webkit
+QT -= phonon xmlpatterns
+TARGET = statistics 
+include(statistics.pri) 
+include(../plugins.inc) 
